--- a/client/src/assets/css/UserHomePage.css
+++ b/client/src/assets/css/UserHomePage.css
@@ -2,3 +2,9 @@
     min-height: 100vh;
     width: 100%;
 }
+
+.w-outline {
+    border-style: solid;
+    border-width: 2px;
+    border-color: white;
+}
