--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,13 @@ code {
   min-height: 100vh;
   width: 100%;
 }
+
+.div-90vh {
+  min-height: 90vh;
+  width: 100%;
+}
+
+.centered-nav > .navbar-brand {
+  float: none;
+  display: inline-block;
+}
