--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,12 @@ code {
   width: 100%;
 }
 
+.navbar-header {
+  float: left;
+  text-align: center;
+  width: 100%;
+}
+
 .centered-nav > .navbar-brand {
-  float: none;
-  display: inline-block;
+  float:none;
 }
