Installed mongoose, connected to remote MongoDB, progress on TradeLogPage and UserEntryTrades component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,3 +37,9 @@ code {
 .centered-nav > .navbar-brand {
   float:none;
 }
+
+.w-outline {
+  border-style: solid;
+  border-width: 2px;
+  border-color: white;
+}
